tests/diagnostics/comments/doc_comments/inside_block/expect.txt
# exit: 1
lib.coppice:2:5: error: doc comment must document a declaration
      /// Block-level docs are invalid.
      ^
